correctly aligned

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ td.options{
 
 div.tabs{
 	position: relative;
-	margin-top: -8px;
+	margin-top: -11px;
 	margin-bottom: -25px;
 	margin-left: 5px;
 	margin-right: auto;
